[package]
name = "hello_rocket"
version = "0.1.0"
edition = "2021"
authors = ["emmanuelbyte <emanuel4mechie@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = "0.4.11"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
